<resources>
    <string name="app_name">Gaavaa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    account-->
    <string name="acc_rv_text11">Profile Settings</string>
    <string name="acc_rv_text12">Change Your Basic Profile</string>
    <string name="acc_rv_text21">Promos</string>
    <string name="acc_rv_text22">Latest Promo from us</string>
    <string name="acc_rv_text31">My Delivery Address</string>
    <string name="acc_rv_text32">Your Address for delivery</string>
    <string name="acc_rv_text41">Terms, Privacy &amp; Policy</string>
    <string name="acc_rv_text42">Things you need to know</string>
    <string name="acc_rv_text51">Help &amp; Support</string>
    <string name="acc_rv_text52">Get support from us</string>


    <!--    fragment product-->
    <string name="product_title">Cabbage Savoy</string>
    <string name="product_price_old">1.20/kg</string>
    <string name="product_price_new">1.35</string>
    <string name="product_detail_title">About the product</string>
    <string name="maybe_you_likes">Maybe You Likes</string>
    <string name="product_description">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for.
    making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for</string>
    <string name="add_to_cart">Add To Cart</string>

    <string name="eo_text1">You haven’t placed any orders yet.</string>
    <string name="eo_text2">When you do, their status will appear here.</string>
    <string name="eo_text3">No orders has been completed yet.</string>
    <string name="eo_text4">No orders has been cancelled yet.</string>
    <string name="ce_text1">Oops! Your cart is empty!</string>
    <string name="ce_text2">Check our bestsellers and find something for you.</string>

    <string name="shop_now_btn">Shop Now</string>
    <string name="confirm_btn">Confirm</string>
    <string name="ayata">Ayata Inc.</string>

    <string name="os_title">Order Summary</string>
    <string name="os_text1">Order Details</string>
    <string name="os_text2">Payment Method</string>
    <string name="os_text3">Delivery Address</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>

    <!--    //login-->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue_with_your_profile">Login to continue with your profile</string>
    <string name="email_phone_number">Email / Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="continue_with_faceboook">Continue with Faceboook</string>
    <string name="vegetables_are_important_sources_of_many_nutrients_including_potassium_dietart_fiber_folic_acid_vitamin_a_and_vitamin_c">Vegetables are important sources of many nutrients, including potassium, dietart fiber, folic acid, Vitamin A and Vitamin C.</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="enter_code_sent_nto_your_number">Enter code sent\nto your number</string>
    <string name="we_sent_it_to_the_number_977_9818000000">We sent it to the number +977 9818000000</string>
    <string name="next">Next</string>
    <string name="verifying">Verifying...</string>
    <!--    cart-->
    <string name="shop_now">Shop Now</string>
    <!--    //signup-->
    <string name="let_s_get_started">Let’s get started</string>
    <string name="create_account_to_see_our_special_offers">Create account to see our special offers!</string>
    <string name="email">Email</string>
    <string name="payment">Payment</string>
    <string name="my_order">My Order</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>

</resources>