<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <ScrollView
        android:id="@+id/scroll_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                android:padding="24dp"
                android:src="@drawable/spinach"
                app:layout_constraintDimensionRatio="H,9:8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="350dp" />

            <LinearLayout
                android:id="@+id/linear1"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_product">

                <ImageView
                    android:id="@+id/thumb_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/ic_thumb_up"/>

                <TextView
                    android:id="@+id/thumb_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="783"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorGrayDark"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/thumb_desp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="added to favourites"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/text_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:text="@string/product_title"
                android:textColor="@color/colorGrayDark"
                android:textSize="24sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/linear1"
                app:layout_constraintTop_toBottomOf="@+id/linear1" />


            <TextView
                android:id="@+id/text_product_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="From Chepang"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorGrayDark"
                app:layout_constraintStart_toStartOf="@+id/text_product_name"
                app:layout_constraintTop_toBottomOf="@+id/text_product_name" />

            <TextView
                android:id="@+id/text_product_newPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/product_price_new"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_product_from" />

            <TextView
                android:id="@+id/text_product_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="1000 g"
                android:textColor="@color/colorGray"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/text_product_from"
                app:layout_constraintEnd_toStartOf="@+id/text_product_newPrice"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/text_product_from" />

            <TextView
                android:id="@+id/text_product_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/product_detail_title"
                android:textColor="@color/colorBlack"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/text_product_weight"
                app:layout_constraintTop_toBottomOf="@+id/text_product_newPrice" />

            <TextView
                android:id="@+id/text_product_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:text="@string/product_description"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
                app:layout_constraintStart_toStartOf="@+id/text_product_description_title"
                app:layout_constraintTop_toBottomOf="@+id/text_product_description_title" />

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                style="@style/CustomButtonGreen"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>