<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="?android:colorBackground"
        tools:context=".ui.Fragment.order.FragmentOrderSummary"
        app:layout_behavior=".utils.OverScrollBehaviour">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="10dp"
            android:text="@string/os_text1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorBlack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginTop="15dp"
            android:paddingTop="16dp"
            android:background="@color/white" />


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_view"
            android:paddingTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">

                <TextView
                    android:id="@+id/pay_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Order Total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Rs. "
                    android:textColor="@color/colorGray" />

                <TextView
                    android:id="@+id/pay_orderprice"
                    style="@style/MyNumberFontFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="200"
                    android:textColor="@color/colorGray" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">

                <TextView
                    android:id="@+id/pay_title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Delivery Fee"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorGray" />

                <TextView
                    android:id="@+id/pay_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Free"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <ImageView
                android:id="@+id/dotted_line"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginHorizontal="14dp"
                android:layerType="software"
                android:src="@drawable/dotted_line" />

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/pay_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Total Payment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorGrayDark"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Rs. "
                    android:textColor="@color/colorGrayDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pay_total"
                    style="@style/MyNumberFontFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="200"
                    android:textColor="@color/colorGrayDark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:background="@color/white"

            android:orientation="vertical">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="20dp"
                android:text="@string/os_text2"
                android:textColor="@color/colorGrayDark"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/layout_pay_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_marginHorizontal="@dimen/margin_start"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/background_grey"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/text_pay_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_start"
                    android:text="@string/ayata"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/image_pay_type"
                    style="@style/MyNumberFontFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="@dimen/margin_start"
                    android:gravity="center"
                    android:text="Esewa"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>